# cs2823r_Project

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  release.yml
cib_med/: __init__.py  cli.py
cib_med/analysis/: __init__.py  ablation.py  correlation.py  pareto.py  synthetic.py
cib_med/baselines/: __init__.py  image_to_image.py  prompt_based.py
cib_med/core/: __init__.py  anchor.py  calibration.py  evaluator.py  semantic_coordinates.py  trajectory.py
cib_med/guidance/: __init__.py  base.py  constrained.py  unconstrained.py
cib_med/metrics/: __init__.py  benchmark.py  drift.py  progression.py
cib_med/models/: __init__.py  diffusion.py  unet.py
cib_med/utils/: __init__.py  io.py  logging.py  reproducibility.py
cib_med/visualization/: __init__.py  figures.py  plots.py
configs/: default.yaml  experiment_configs.yaml
examples/: demo_notebook.py  quick_start.py
scripts/: generate_figures.py  run_ablations.py  run_benchmark.py  run_stress_tests.py
tests/: __init__.py  test_basic.py  test_core.py  test_guidance.py  test_metrics.py
